Responsive Admin Dashboard V.1.1.css

--- a/css/Responsive Admin Dashboard V.1.1.css
+++ b/css/Responsive Admin Dashboard V.1.1.css
@@ -50,6 +50,7 @@ html{
 body{
     background: var(--color-light);
     min-height: 100vh;
+    width: 100%;
     color: var(--color-dark);
 }
 img{
